# Brook

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  pagerank.cc
data/: CMakeLists.txt
data/mergeGradient/: text-00000-of-0000  text-00001-of-0000
doc/: install.md
src/agent/: CMakeLists.txt  Makefile  agent.cc  agent.h  agent_main.cc  cmake_install.cmake  flags.cc  flags.h  reader.cc  reader.h
src/base/: CMakeLists.txt  Makefile  class_register.h  class_register_test.cc  class_register_test_helper.cc  class_register_test_helper.h  cmake_install.cmake  common.h  cvector.h  cvector_test.cc  file_util.h  file_util_test.cc  filepattern.cc  filepattern.h  filepattern_test.cc  logging.cc  logging.h  logging_test.cc  random.cc  random.h  scoped_ptr.h  stl-util.h  stl-util_test.cc  stream_wrapper.cc  stream_wrapper.h  varint32.cc  varint32.h  varint32_test.cc
src/collection/: CMakeLists.txt  collection.cc  collection.h
src/communication/: CMakeLists.txt  communicator.h  mpi_asy_communicator.h  mpi_communicator.cc  mpi_communicator.h  mpi_communicator_test.cc  mpi_sendrecv.cc  mpi_sendrecv.h  mpi_sendrecv_test.cc  signaling_queue.cc  signaling_queue.h  signaling_queue_test.cc  zmq_communicator.h  zmq_sendrecv.h
src/consistency/: CMakeLists.txt  consistency.cc  consistency.h  consistency_test.cc  fifo.cc  fifo.h  fifo_test.cc
src/core/: CMakeLists.txt  Makefile  brook_main.cc  cmake_install.cmake  flags.cc  flags.h  message.h  puller.cc  puller.h  pusher.cc  pusher.h  reader.cc  reader.h  reader_test.cc  run.sh
src/core/agent/: reader.h
src/executor/: CMakeLists.txt  agent.cc  agent.h  brook.cc  brook.h  brook_main.cc  flags.cc  flags.h  master.cc  master.h  server.cc  server.h
src/gtest/: Makefile  cmake_install.cmake
src/hash/: CMakeLists.txt  Makefile  cmake_install.cmake  md5_hash.cc  md5_hash.h  md5_hash_test.cc  simple_hash.cc  simple_hash.h
src/in_memory_store/: CMakeLists.txt  Makefile  cmake_install.cmake  dense_table.h  dense_table_test.cc  dense_vector.h  dense_vector_test.cc  sparse_table.h  sparse_table_test.cc  sparse_vector.cc  sparse_vector.h  sparse_vector_test.cc  vector_iterator.h  vector_iterator_test.cc
src/main/: brook_main.cc  flags.cc  flags.h
src/message/: CMakeLists.txt  Makefile  TestDouble  cmake_install.cmake  message.proto  message_test.cc  partition.h  partition_test.cc  reader.cc  reader.h  reader_test.cc
src/mrml/: CMakeLists.txt  flags.cc  flags.h  mappers_and_reducers.h  mapreduce.cc  mapreduce.h  protofile.cc  protofile.h  protofile.proto  protofile_test.cc  reader.cc  reader.h  reader_test.cc  register_test.cc  registerer_test.cc  typedef.h  utils.h  utils_test.cc
src/mrml/test/: CMakeLists.txt  local_batch_wordcount_run.sh  local_inre_wordcount_run.sh  local_wordcount_run.sh  mrml_main.cc
src/mrml/test/mergeGradient/: local_incre_mergeGradient_run.sh
src/mrml/test/wordcount/: local_batch_wordcount_run.sh  local_inre_wordcount_run.sh
src/parameter/: CMakeLists.txt  accessing_table.h  accessing_table_test.cc  bitmap.cc  bitmap.h  bitmap_test.cc  carray_vector_tmpl.h  carray_vector_tmpl_test.cc  cyclic_queue_tmpl.h  dense_matrix_tmpl.h  dense_matrix_tmpl_test.cc  dense_vector_tmpI.h  dense_vector_tmpl.h  dense_vector_tmpl_test.cc  parameter_tmpl.h  parameter_tmpl_test.cc  random_queue_tmpl.h  random_queue_tmpl_test.cc  skip_list_tmpl.h  skip_list_tmpl_test.cc  sparse_matrix_tmpl.h  sparse_matrix_tmpl_test.cc  sparse_vector_tmpl.h  sparse_vector_tmpl_test.cc  update_tmpl.h  update_tmpl_test.cc  version_buffer_tmpl.h  version_buffer_tmpl_test.cc
src/pre_defined/: message_define.h
src/server/: CMakeLists.txt  Makefile  cmake_install.cmake  server.cc  server.h
src/sorted_buffer/: CMakeLists.txt  Makefile  cmake_install.cmake  memory_allocator.cc  memory_allocator.h  memory_allocator_test.cc  memory_piece.cc  memory_piece.h  memory_piece_io_test.cc  memory_piece_less_than_test.cc  memory_piece_test.cc  sorted_buffer.cc  sorted_buffer.h  sorted_buffer_iterator.cc  sorted_buffer_iterator.h  sorted_buffer_iterator_test.cc  sorted_buffer_regression_test.cc  sorted_buffer_test.cc
src/strutil/: CMakeLists.txt  Makefile  cmake_install.cmake  split_string.cc  split_string.h  split_string_test.cc
src/system/: CMakeLists.txt  condition_variable.cc  condition_variable.h  condition_variable_test.cc  filepattern.cc  filepattern.h  filepattern_test.cc  mutex.h  mutex_test.cc  scoped_locker.h
src/util/: CMakeLists.txt  bitmap.cc  bitmap.h  bitmap_test.cc  class_register.h  class_register_test  class_register_test.cc  class_register_test_helper.cc  class_register_test_helper.h  common.h  debug_print.h  file_util.h  file_util_test.cc  join_strings.h  join_strings_test  join_strings_test.cc  logging.cc  logging.h  md5_hash.cc  md5_hash.h  md5_hash_test.cc  scoped_ptr.h  simple_hash.cc  simple_hash.h  split_string.cc  split_string.h  split_string_test  split_string_test.cc  stdint_msvc.h  stl-util.h  stl-util_test  stl-util_test.cc  strcodec.cc  strcodec.h  strcodec_test.cc  stringprintf.cc  stringprintf.h  stringprintf_test.cc
